required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------


Version 1.6.2 (2007-07-12)
--------------------------

***   ***   ***   ***   ***
- IMPORTANT: The optimized spatial index introduced in V1.6.0 has been 
  disabled by default in this release after we found that the current block
  splitting technique often produces files that confuse MapInfo (bug 1732).
  The Quick Spatial Index Mode is used by default until bug 1732 is fixed.
***   ***   ***   ***   ***

- Fixed error reading compressed text objects introduced in v1.6.0 (bug 1722)

- Fixed memory leaks when reading multipoint objects from .MIF files

- Added IMapInfoFile::SetCharset() method (bug 1734)

- Added TABFile::TwoPointLineAsPolyline() to allow writing two point lines
  as polylines (bug 1735)

- Added missing cast in isspace() calls to avoid failed assertion on Windows
  (MITAB bug 1737, GDAL ticket 1678))

- Fixed memory leak when writing .TAB with new (optimized) spatial index
  introduced in v1.6.0 (bug 1725)

- Fixed another issue related to attempting to read past EOF while writing
  collections (bug 1657)

- Fixed a problem writing collections where collection objects were trashed
  during object block splitting (bug 1728)

- Fixed support for predefined datums with non-greenwich prime meridians per
   http://trac.osgeo.org/gdal/ticket/1416

- Updated mitab_dyn.pas to support both Delphi and Kylix (contrib by 
  UffeK and MaximV, bug 1746)

- Added support for building libmitab.so shared lib (contrib by UffeK and
  MaximV, bug 1746)

- Avoid deprecation warnings for some common functions with VC7+ (bug 1749)


Version 1.6.1 (2007-03-30)
--------------------------
